# daybreak-game-engine

./: CMakeLists.txt  README.md  main.cpp
dependencies/glfw/src/: egl_context.c  win32_window.c
include/: Allocator.h  AssetManager.h  Buffer.h  Common.h  Component.h  ComponentStore.h  ComponentType.h  Daybreak.h  DescriptorSet.h  Entity.h  Game.h  GameComponent.h  GameObject.h  Initializer.h  Log.h  Manager.h  Mesh.h  MeshComponent.h  Model.h  Pipeline.h  PoolAllocator.h  RenderPass.h  Renderer.h  Scene.h  Shader.h  System.h  Timer.h  Transform.h  UniformBuffer.h  UniformBufferObject.h  Util.h  VulkanAPI.h  Window.h
resources/models/: Wolf.mtl
resources/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/asset/: AssetManager.cpp
src/components/: MeshComponent.cpp
src/core/: Daybreak.cpp  GameComponent.cpp  GameObject.cpp  Manager.cpp  Scene.cpp  System.cpp  Transform.cpp
src/memory/: Allocator.cpp  PoolAllocator.cpp
src/rendering/: Buffer.cpp  DescriptorSet.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  UniformBuffer.cpp  VulkanAPI.cpp  Window.cpp
src/util/: Log.cpp  Timer.cpp  Util.cpp
